src/netknife_ply/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> init_exp
Rule 1     init_exp -> at_exp
Rule 2     init_exp -> PROTOCOL NULL at_exp
Rule 3     init_exp -> PROTOCOL NULL address_exp NULL at_exp
Rule 4     init_exp -> PROTOCOL NULL address_exp NULL at_exp NULL param_exp
Rule 5     init_exp -> PROTOCOL NULL address_exp
Rule 6     init_exp -> PROTOCOL NULL address_exp NULL param_exp
Rule 7     init_exp -> PROTOCOL NULL address_exp NULL port_number_block_exp
Rule 8     init_exp -> PROTOCOL NULL address_exp NULL port_number_block_exp NULL param_exp
Rule 9     at_exp -> at_protocol_exp
Rule 10    at_exp -> at_param_exp
Rule 11    at_exp -> at_exp NULL at_protocol_exp
Rule 12    at_exp -> at_exp NULL at_param_exp
Rule 13    at_protocol_exp -> AT
Rule 14    at_protocol_exp -> AT PROTOCOL
Rule 15    at_protocol_exp -> AT NOT PROTOCOL
Rule 16    at_protocol_exp -> at_protocol_exp COMMA PROTOCOL
Rule 17    at_protocol_exp -> at_protocol_exp COMMA NOT PROTOCOL
Rule 18    at_param_exp -> INNER AT address_exp
Rule 19    at_param_exp -> AT address_exp
Rule 20    at_param_exp -> INNER AT address_exp EQ sn_exp
Rule 21    at_param_exp -> INNER AT address_exp EQ port_number_block_exp
Rule 22    at_param_exp -> INNER AT address_exp EQ special_info_exp
Rule 23    special_info_exp -> QUOTATION NOT
Rule 24    special_info_exp -> QUOTATION RANGE
Rule 25    special_info_exp -> QUOTATION NUMBER
Rule 26    special_info_exp -> QUOTATION WORD
Rule 27    special_info_exp -> QUOTATION AT
Rule 28    special_info_exp -> QUOTATION MOD
Rule 29    special_info_exp -> QUOTATION EQ
Rule 30    special_info_exp -> QUOTATION DOT
Rule 31    special_info_exp -> QUOTATION COMMA
Rule 32    special_info_exp -> QUOTATION SEMICOLON
Rule 33    special_info_exp -> QUOTATION NOTUSE
Rule 34    special_info_exp -> special_info_exp NOT
Rule 35    special_info_exp -> special_info_exp RANGE
Rule 36    special_info_exp -> special_info_exp NUMBER
Rule 37    special_info_exp -> special_info_exp WORD
Rule 38    special_info_exp -> special_info_exp AT
Rule 39    special_info_exp -> special_info_exp MOD
Rule 40    special_info_exp -> special_info_exp EQ
Rule 41    special_info_exp -> special_info_exp DOT
Rule 42    special_info_exp -> special_info_exp COMMA
Rule 43    special_info_exp -> special_info_exp SEMICOLON
Rule 44    special_info_exp -> special_info_exp NOTUSE
Rule 45    special_info_exp -> special_info_exp QUOTATION
Rule 46    address_exp -> ipv4_exp
Rule 47    address_exp -> domain_exp
Rule 48    address_exp -> address_exp SEMICOLON ipv4_exp
Rule 49    address_exp -> address_exp SEMICOLON domain_exp
Rule 50    domain_exp -> domain_block_exp
Rule 51    domain_exp -> domain_exp COMMA domain_block_exp
Rule 52    ipv4_exp -> ipv4_number_block_exp DOT ipv4_number_block_exp DOT ipv4_number_block_exp DOT ipv4_number_block_exp
Rule 53    port_number_block_exp -> number_block_exp
Rule 54    port_number_block_exp -> NOT number_block_exp
Rule 55    port_number_block_exp -> number_block_exp NOT number_block_exp
Rule 56    ipv4_number_block_exp -> number_block_exp
Rule 57    ipv4_number_block_exp -> NOT number_block_exp
Rule 58    ipv4_number_block_exp -> number_block_exp NOT number_block_exp
Rule 59    sn_exp -> WORD
Rule 60    sn_exp -> NUMBER WORD
Rule 61    sn_exp -> sn_exp WORD
Rule 62    sn_exp -> sn_exp NUMBER
Rule 63    domain_block_exp -> sn_exp DOT sn_exp
Rule 64    domain_block_exp -> ipv4_number_block_exp DOT sn_exp
Rule 65    domain_block_exp -> domain_block_exp DOT sn_exp
Rule 66    domain_block_exp -> domain_block_exp DOT NUMBER
Rule 67    number_block_exp -> number_exp
Rule 68    number_block_exp -> number_block_exp COMMA number_exp
Rule 69    number_exp -> NUMBER
Rule 70    number_exp -> NUMBER RANGE NUMBER
Rule 71    number_exp -> NUMBER RANGE NUMBER MOD NUMBER
Rule 72    param_exp -> INNER EQ sn_exp
Rule 73    param_exp -> INNER EQ address_exp
Rule 74    param_exp -> INNER EQ NULL
Rule 75    param_exp -> INNER EQ port_number_block_exp
Rule 76    param_exp -> INNER EQ special_info_exp
Rule 77    param_exp -> INNER EQ sn_exp NULL param_exp
Rule 78    param_exp -> INNER EQ address_exp NULL param_exp
Rule 79    param_exp -> INNER EQ port_number_block_exp NULL param_exp
Rule 80    param_exp -> INNER EQ special_info_exp NULL param_exp

Terminals, with rules where they appear

AT                   : 13 14 15 18 19 20 21 22 27 38
COMMA                : 16 17 31 42 51 68
DOT                  : 30 41 52 52 52 63 64 65 66
EQ                   : 20 21 22 29 40 72 73 74 75 76 77 78 79 80
INNER                : 18 20 21 22 72 73 74 75 76 77 78 79 80
MOD                  : 28 39 71
NOT                  : 15 17 23 34 54 55 57 58
NOTUSE               : 33 44
NULL                 : 2 3 3 4 4 4 5 6 6 7 7 8 8 8 11 12 74 77 78 79 80
NUMBER               : 25 36 60 62 66 69 70 70 71 71 71
PROTOCOL             : 2 3 4 5 6 7 8 14 15 16 17
QUOTATION            : 23 24 25 26 27 28 29 30 31 32 33 45
RANGE                : 24 35 70 71
SEMICOLON            : 32 43 48 49
WORD                 : 26 37 59 60 61
error                : 

Nonterminals, with rules where they appear

address_exp          : 3 4 5 6 7 8 18 19 20 21 22 48 49 73 78
at_exp               : 1 2 3 4 11 12
at_param_exp         : 10 12
at_protocol_exp      : 9 11 16 17
domain_block_exp     : 50 51 65 66
domain_exp           : 47 49 51
init_exp             : 0
ipv4_exp             : 46 48
ipv4_number_block_exp : 52 52 52 52 64
number_block_exp     : 53 54 55 55 56 57 58 58 68
number_exp           : 67 68
param_exp            : 4 6 8 77 78 79 80
port_number_block_exp : 7 8 21 75 79
sn_exp               : 20 61 62 63 63 64 65 72 77
special_info_exp     : 22 34 35 36 37 38 39 40 41 42 43 44 45 76 80

Parsing method: LALR

state 0

    (0) S' -> . init_exp
    (1) init_exp -> . at_exp
    (2) init_exp -> . PROTOCOL NULL at_exp
    (3) init_exp -> . PROTOCOL NULL address_exp NULL at_exp
    (4) init_exp -> . PROTOCOL NULL address_exp NULL at_exp NULL param_exp
    (5) init_exp -> . PROTOCOL NULL address_exp
    (6) init_exp -> . PROTOCOL NULL address_exp NULL param_exp
    (7) init_exp -> . PROTOCOL NULL address_exp NULL port_number_block_exp
    (8) init_exp -> . PROTOCOL NULL address_exp NULL port_number_block_exp NULL param_exp
    (9) at_exp -> . at_protocol_exp
    (10) at_exp -> . at_param_exp
    (11) at_exp -> . at_exp NULL at_protocol_exp
    (12) at_exp -> . at_exp NULL at_param_exp
    (13) at_protocol_exp -> . AT
    (14) at_protocol_exp -> . AT PROTOCOL
    (15) at_protocol_exp -> . AT NOT PROTOCOL
    (16) at_protocol_exp -> . at_protocol_exp COMMA PROTOCOL
    (17) at_protocol_exp -> . at_protocol_exp COMMA NOT PROTOCOL
    (18) at_param_exp -> . INNER AT address_exp
    (19) at_param_exp -> . AT address_exp
    (20) at_param_exp -> . INNER AT address_exp EQ sn_exp
    (21) at_param_exp -> . INNER AT address_exp EQ port_number_block_exp
    (22) at_param_exp -> . INNER AT address_exp EQ special_info_exp

    PROTOCOL        shift and go to state 3
    AT              shift and go to state 6
    INNER           shift and go to state 7

    init_exp                       shift and go to state 1
    at_exp                         shift and go to state 2
    at_protocol_exp                shift and go to state 4
    at_param_exp                   shift and go to state 5

state 1

    (0) S' -> init_exp .



state 2

    (1) init_exp -> at_exp .
    (11) at_exp -> at_exp . NULL at_protocol_exp
    (12) at_exp -> at_exp . NULL at_param_exp

    $end            reduce using rule 1 (init_exp -> at_exp .)
    NULL            shift and go to state 8


state 3

    (2) init_exp -> PROTOCOL . NULL at_exp
    (3) init_exp -> PROTOCOL . NULL address_exp NULL at_exp
    (4) init_exp -> PROTOCOL . NULL address_exp NULL at_exp NULL param_exp
    (5) init_exp -> PROTOCOL . NULL address_exp
    (6) init_exp -> PROTOCOL . NULL address_exp NULL param_exp
    (7) init_exp -> PROTOCOL . NULL address_exp NULL port_number_block_exp
    (8) init_exp -> PROTOCOL . NULL address_exp NULL port_number_block_exp NULL param_exp

    NULL            shift and go to state 9


state 4

    (9) at_exp -> at_protocol_exp .
    (16) at_protocol_exp -> at_protocol_exp . COMMA PROTOCOL
    (17) at_protocol_exp -> at_protocol_exp . COMMA NOT PROTOCOL

    NULL            reduce using rule 9 (at_exp -> at_protocol_exp .)
    $end            reduce using rule 9 (at_exp -> at_protocol_exp .)
    COMMA           shift and go to state 10


state 5

    (10) at_exp -> at_param_exp .

    NULL            reduce using rule 10 (at_exp -> at_param_exp .)
    $end            reduce using rule 10 (at_exp -> at_param_exp .)


state 6

    (13) at_protocol_exp -> AT .
    (14) at_protocol_exp -> AT . PROTOCOL
    (15) at_protocol_exp -> AT . NOT PROTOCOL
    (19) at_param_exp -> AT . address_exp
    (46) address_exp -> . ipv4_exp
    (47) address_exp -> . domain_exp
    (48) address_exp -> . address_exp SEMICOLON ipv4_exp
    (49) address_exp -> . address_exp SEMICOLON domain_exp
    (52) ipv4_exp -> . ipv4_number_block_exp DOT ipv4_number_block_exp DOT ipv4_number_block_exp DOT ipv4_number_block_exp
    (50) domain_exp -> . domain_block_exp
    (51) domain_exp -> . domain_exp COMMA domain_block_exp
    (56) ipv4_number_block_exp -> . number_block_exp
    (57) ipv4_number_block_exp -> . NOT number_block_exp
    (58) ipv4_number_block_exp -> . number_block_exp NOT number_block_exp
    (63) domain_block_exp -> . sn_exp DOT sn_exp
    (64) domain_block_exp -> . ipv4_number_block_exp DOT sn_exp
    (65) domain_block_exp -> . domain_block_exp DOT sn_exp
    (66) domain_block_exp -> . domain_block_exp DOT NUMBER
    (67) number_block_exp -> . number_exp
    (68) number_block_exp -> . number_block_exp COMMA number_exp
    (59) sn_exp -> . WORD
    (60) sn_exp -> . NUMBER WORD
    (61) sn_exp -> . sn_exp WORD
    (62) sn_exp -> . sn_exp NUMBER
    (69) number_exp -> . NUMBER
    (70) number_exp -> . NUMBER RANGE NUMBER
    (71) number_exp -> . NUMBER RANGE NUMBER MOD NUMBER

    COMMA           reduce using rule 13 (at_protocol_exp -> AT .)
    NULL            reduce using rule 13 (at_protocol_exp -> AT .)
    $end            reduce using rule 13 (at_protocol_exp -> AT .)
    PROTOCOL        shift and go to state 11
    NOT             shift and go to state 12
    WORD            shift and go to state 22
    NUMBER          shift and go to state 20

    address_exp                    shift and go to state 13
    ipv4_exp                       shift and go to state 14
    domain_exp                     shift and go to state 15
    ipv4_number_block_exp          shift and go to state 16
    domain_block_exp               shift and go to state 17
    number_block_exp               shift and go to state 18
    sn_exp                         shift and go to state 19
    number_exp                     shift and go to state 21

state 7

    (18) at_param_exp -> INNER . AT address_exp
    (20) at_param_exp -> INNER . AT address_exp EQ sn_exp
    (21) at_param_exp -> INNER . AT address_exp EQ port_number_block_exp
    (22) at_param_exp -> INNER . AT address_exp EQ special_info_exp

    AT              shift and go to state 23


state 8

    (11) at_exp -> at_exp NULL . at_protocol_exp
    (12) at_exp -> at_exp NULL . at_param_exp
    (13) at_protocol_exp -> . AT
    (14) at_protocol_exp -> . AT PROTOCOL
    (15) at_protocol_exp -> . AT NOT PROTOCOL
    (16) at_protocol_exp -> . at_protocol_exp COMMA PROTOCOL
    (17) at_protocol_exp -> . at_protocol_exp COMMA NOT PROTOCOL
    (18) at_param_exp -> . INNER AT address_exp
    (19) at_param_exp -> . AT address_exp
    (20) at_param_exp -> . INNER AT address_exp EQ sn_exp
    (21) at_param_exp -> . INNER AT address_exp EQ port_number_block_exp
    (22) at_param_exp -> . INNER AT address_exp EQ special_info_exp

    AT              shift and go to state 6
    INNER           shift and go to state 7

    at_protocol_exp                shift and go to state 24
    at_param_exp                   shift and go to state 25

state 9

    (2) init_exp -> PROTOCOL NULL . at_exp
    (3) init_exp -> PROTOCOL NULL . address_exp NULL at_exp
    (4) init_exp -> PROTOCOL NULL . address_exp NULL at_exp NULL param_exp
    (5) init_exp -> PROTOCOL NULL . address_exp
    (6) init_exp -> PROTOCOL NULL . address_exp NULL param_exp
    (7) init_exp -> PROTOCOL NULL . address_exp NULL port_number_block_exp
    (8) init_exp -> PROTOCOL NULL . address_exp NULL port_number_block_exp NULL param_exp
    (9) at_exp -> . at_protocol_exp
    (10) at_exp -> . at_param_exp
    (11) at_exp -> . at_exp NULL at_protocol_exp
    (12) at_exp -> . at_exp NULL at_param_exp
    (46) address_exp -> . ipv4_exp
    (47) address_exp -> . domain_exp
    (48) address_exp -> . address_exp SEMICOLON ipv4_exp
    (49) address_exp -> . address_exp SEMICOLON domain_exp
    (13) at_protocol_exp -> . AT
    (14) at_protocol_exp -> . AT PROTOCOL
    (15) at_protocol_exp -> . AT NOT PROTOCOL
    (16) at_protocol_exp -> . at_protocol_exp COMMA PROTOCOL
    (17) at_protocol_exp -> . at_protocol_exp COMMA NOT PROTOCOL
    (18) at_param_exp -> . INNER AT address_exp
    (19) at_param_exp -> . AT address_exp
    (20) at_param_exp -> . INNER AT address_exp EQ sn_exp
    (21) at_param_exp -> . INNER AT address_exp EQ port_number_block_exp
    (22) at_param_exp -> . INNER AT address_exp EQ special_info_exp
    (52) ipv4_exp -> . ipv4_number_block_exp DOT ipv4_number_block_exp DOT ipv4_number_block_exp DOT ipv4_number_block_exp
    (50) domain_exp -> . domain_block_exp
    (51) domain_exp -> . domain_exp COMMA domain_block_exp
    (56) ipv4_number_block_exp -> . number_block_exp
    (57) ipv4_number_block_exp -> . NOT number_block_exp
    (58) ipv4_number_block_exp -> . number_block_exp NOT number_block_exp
    (63) domain_block_exp -> . sn_exp DOT sn_exp
    (64) domain_block_exp -> . ipv4_number_block_exp DOT sn_exp
    (65) domain_block_exp -> . domain_block_exp DOT sn_exp
    (66) domain_block_exp -> . domain_block_exp DOT NUMBER
    (67) number_block_exp -> . number_exp
    (68) number_block_exp -> . number_block_exp COMMA number_exp
    (59) sn_exp -> . WORD
    (60) sn_exp -> . NUMBER WORD
    (61) sn_exp -> . sn_exp WORD
    (62) sn_exp -> . sn_exp NUMBER
    (69) number_exp -> . NUMBER
    (70) number_exp -> . NUMBER RANGE NUMBER
    (71) number_exp -> . NUMBER RANGE NUMBER MOD NUMBER

    AT              shift and go to state 6
    INNER           shift and go to state 7
    NOT             shift and go to state 28
    WORD            shift and go to state 22
    NUMBER          shift and go to state 20

    at_exp                         shift and go to state 26
    address_exp                    shift and go to state 27
    at_protocol_exp                shift and go to state 4
    at_param_exp                   shift and go to state 5
    ipv4_exp                       shift and go to state 14
    domain_exp                     shift and go to state 15
    sn_exp                         shift and go to state 19
    ipv4_number_block_exp          shift and go to state 16
    domain_block_exp               shift and go to state 17
    number_block_exp               shift and go to state 18
    number_exp                     shift and go to state 21

state 10

    (16) at_protocol_exp -> at_protocol_exp COMMA . PROTOCOL
    (17) at_protocol_exp -> at_protocol_exp COMMA . NOT PROTOCOL

    PROTOCOL        shift and go to state 29
    NOT             shift and go to state 30


state 11

    (14) at_protocol_exp -> AT PROTOCOL .

    COMMA           reduce using rule 14 (at_protocol_exp -> AT PROTOCOL .)
    NULL            reduce using rule 14 (at_protocol_exp -> AT PROTOCOL .)
    $end            reduce using rule 14 (at_protocol_exp -> AT PROTOCOL .)


state 12

    (15) at_protocol_exp -> AT NOT . PROTOCOL
    (57) ipv4_number_block_exp -> NOT . number_block_exp
    (67) number_block_exp -> . number_exp
    (68) number_block_exp -> . number_block_exp COMMA number_exp
    (69) number_exp -> . NUMBER
    (70) number_exp -> . NUMBER RANGE NUMBER
    (71) number_exp -> . NUMBER RANGE NUMBER MOD NUMBER

    PROTOCOL        shift and go to state 31
    NUMBER          shift and go to state 33

    number_block_exp               shift and go to state 32
    number_exp                     shift and go to state 21

state 13

    (19) at_param_exp -> AT address_exp .
    (48) address_exp -> address_exp . SEMICOLON ipv4_exp
    (49) address_exp -> address_exp . SEMICOLON domain_exp

    NULL            reduce using rule 19 (at_param_exp -> AT address_exp .)
    $end            reduce using rule 19 (at_param_exp -> AT address_exp .)
    SEMICOLON       shift and go to state 34


state 14

    (46) address_exp -> ipv4_exp .

    SEMICOLON       reduce using rule 46 (address_exp -> ipv4_exp .)
    NULL            reduce using rule 46 (address_exp -> ipv4_exp .)
    $end            reduce using rule 46 (address_exp -> ipv4_exp .)
    EQ              reduce using rule 46 (address_exp -> ipv4_exp .)


state 15

    (47) address_exp -> domain_exp .
    (51) domain_exp -> domain_exp . COMMA domain_block_exp

    SEMICOLON       reduce using rule 47 (address_exp -> domain_exp .)
    NULL            reduce using rule 47 (address_exp -> domain_exp .)
    $end            reduce using rule 47 (address_exp -> domain_exp .)
    EQ              reduce using rule 47 (address_exp -> domain_exp .)
    COMMA           shift and go to state 35


state 16

    (52) ipv4_exp -> ipv4_number_block_exp . DOT ipv4_number_block_exp DOT ipv4_number_block_exp DOT ipv4_number_block_exp
    (64) domain_block_exp -> ipv4_number_block_exp . DOT sn_exp

    DOT             shift and go to state 36


state 17

    (50) domain_exp -> domain_block_exp .
    (65) domain_block_exp -> domain_block_exp . DOT sn_exp
    (66) domain_block_exp -> domain_block_exp . DOT NUMBER

    COMMA           reduce using rule 50 (domain_exp -> domain_block_exp .)
    SEMICOLON       reduce using rule 50 (domain_exp -> domain_block_exp .)
    NULL            reduce using rule 50 (domain_exp -> domain_block_exp .)
    $end            reduce using rule 50 (domain_exp -> domain_block_exp .)
    EQ              reduce using rule 50 (domain_exp -> domain_block_exp .)
    DOT             shift and go to state 37


state 18

    (56) ipv4_number_block_exp -> number_block_exp .
    (58) ipv4_number_block_exp -> number_block_exp . NOT number_block_exp
    (68) number_block_exp -> number_block_exp . COMMA number_exp

    DOT             reduce using rule 56 (ipv4_number_block_exp -> number_block_exp .)
    SEMICOLON       reduce using rule 56 (ipv4_number_block_exp -> number_block_exp .)
    NULL            reduce using rule 56 (ipv4_number_block_exp -> number_block_exp .)
    $end            reduce using rule 56 (ipv4_number_block_exp -> number_block_exp .)
    EQ              reduce using rule 56 (ipv4_number_block_exp -> number_block_exp .)
    NOT             shift and go to state 38
    COMMA           shift and go to state 39


state 19

    (63) domain_block_exp -> sn_exp . DOT sn_exp
    (61) sn_exp -> sn_exp . WORD
    (62) sn_exp -> sn_exp . NUMBER

    DOT             shift and go to state 40
    WORD            shift and go to state 41
    NUMBER          shift and go to state 42


state 20
